--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,5 @@ tomcatVersion=10.1.1
 nativeBuildToolsVersion=0.9.18
 
 kotlin.stdlib.default.dependency=false
+org.gradle.configureondemand=true
+org.gradle.daemon=true
